5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4163/executions/1800_2564.log
== TEST (2019-06-05 09:11:46) 
-- CODE:
from numpy import*
mt = array(eval(input("num de gols feitos: ")))
ta =  array(eval(input("num de gols levados: ")))

vet = zeros(3, d type=int)

for x in mt:
	if mt[x]>ta[x]:
		vet[0]= vet[0] + 1
	elif mt[x]==ta[x]:
		vet[1] = vet[1] + 1
	elif mt[x]<ta[x]:
		vet[2] = vet[2] + 1
		
print(vet)
-- ERROR:
File "XXXX", line 5
    vet = zeros(3, d type=int)
                        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-05 09:11:59) 
-- CODE:
from numpy import*
mt = array(eval(input("num de gols feitos: ")))
ta =  array(eval(input("num de gols levados: ")))

vet = zeros(3, dtype=int)

for x in mt:
	if mt[x]>ta[x]:
		vet[0]= vet[0] + 1
	elif mt[x]==ta[x]:
		vet[1] = vet[1] + 1
	elif mt[x]<ta[x]:
		vet[2] = vet[2] + 1
		
print(vet)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-05 09:13:23) 
-- CODE:
from numpy import*
mt = array(eval(input("num de gols feitos: ")))
ta =  array(eval(input("num de gols levados: ")))

vet = zeros(3, dtype=int)

for x in mt:
	if mt[x]>ta[x]:
		vet[0]= vet[0] + 1
	elif mt[x]==ta[x]:
		vet[1] = vet[1] + 1
	elif mt[x]<ta[x]:
		vet[2] = vet[2] + 1
		
print(vet)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-05 09:14:03) 
-- CODE:
from numpy import*
mt = array(eval(input("num de gols feitos: ")))
ta =  array(eval(input("num de gols levados: ")))

vet = zeros(3, dtype=int)

for x in mt:
	if mt[x]<ta[x]:
		vet[0]= vet[0] + 1
	elif mt[x]==ta[x]:
		vet[1] = vet[1] + 1
	elif mt[x]>ta[x]:
		vet[2] = vet[2] + 1
		
print(vet)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-05 09:14:32) 
-- CODE:
from numpy import*
mt = array(eval(input("num de gols feitos: ")))
ta =  array(eval(input("num de gols levados: ")))

vet = zeros(3, dtype=int)

for x in mt:
	if mt[x]<ta[x]:
		vet[0]= vet[0] + 1
	elif mt[x]==ta[x]:
		vet[1] = vet[1] + 1
	elif mt[x]>ta[x]:
		vet[2] = vet[2] + 1
		
print(vet)
-- EXECUTION TIME:
1.09136
-- TEST CASE 1:
---- input:
[2,3,2,4,3,5,3,4,2,3,1,0]
[3,3,1,0,2,3,3,0,1,2,1,1]
---- correct output:
[7 3 2]
---- user output:
[ 1  1 10]
-- TEST CASE 2:
---- input:
[1,2,1,2,1,2,1,2,0]
[3,5,3,3,3,3,3,3,3]
---- correct output:
[0 0 9]
---- user output:
[9 0 0]
-- TEST CASE 3:
---- input:
[1,2,2,2,2,1,1,2,2,1,1,2,2]
[0,1,1,1,0,0,0,0,0,0,1,1,1]
---- correct output:
[12 1 0]
---- user output:
[ 0  0 13]
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-05 09:14:59) 
-- CODE:
from numpy import*
mt = array(eval(input("num de gols feitos: ")))
ta =  array(eval(input("num de gols levados: ")))

vet = zeros(3, dtype=int)

for x in mt:
	if mt[x]>ta[x]:
		vet[0]= vet[0] + 1
	elif mt[x]==ta[x]:
		vet[1] = vet[1] + 1
	elif mt[x]<ta[x]:
		vet[2] = vet[2] + 1
		
print(vet)
-- EXECUTION TIME:
1.21058
-- TEST CASE 1:
---- input:
[2,3,2,4,3,5,3,4,2,3,1,0]
[3,3,1,0,2,3,3,0,1,2,1,1]
---- correct output:
[7 3 2]
---- user output:
[10  1  1]
-- TEST CASE 2:
---- input:
[1,2,1,2,1,2,1,2,0]
[3,5,3,3,3,3,3,3,3]
---- correct output:
[0 0 9]
---- user output:
[0 0 9]
-- TEST CASE 3:
---- input:
[1,2,2,2,2,1,1,2,2,1,1,2,2]
[0,1,1,1,0,0,0,0,0,0,1,1,1]
---- correct output:
[12 1 0]
---- user output:
[13  0  0]
-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-05 09:21:11) 
-- CODE:
from numpy import*
mt = array(eval(input("num de gols feitos: ")))
ta =  array(eval(input("num de gols levados: ")))

vet = zeros(3, dtype=int)

for x in mt:
	if mt[x]>ta[x]: #vitoria
		vet[2]= vet[2] + 1
	elif mt[x]==ta[x]:#empate
		vet[1] = vet[1] + 1
	elif mt[x]<ta[x]: #derrota
		vet[0] = vet[0] + 1
		
print(vet)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-05 09:21:44) 
-- CODE:
from numpy import*
mt = array(eval(input("num de gols feitos: ")))
ta =  array(eval(input("num de gols levados: ")))

vet = zeros(3, dtype=int)

for x in mt:
	if mt[x]>ta[x]: #vitoria
		vet[2]= vet[2] + 1
	elif mt[x]==ta[x]:#empate
		vet[1] = vet[1] + 1
	elif mt[x]<ta[x]: #derrota
		vet[0] = vet[0] + 1
		
print(vet)
-- EXECUTION TIME:
1.13578
-- TEST CASE 1:
---- input:
[2,3,2,4,3,5,3,4,2,3,1,0]
[3,3,1,0,2,3,3,0,1,2,1,1]
---- correct output:
[7 3 2]
---- user output:
[ 1  1 10]
-- TEST CASE 2:
---- input:
[1,2,1,2,1,2,1,2,0]
[3,5,3,3,3,3,3,3,3]
---- correct output:
[0 0 9]
---- user output:
[9 0 0]
-- TEST CASE 3:
---- input:
[1,2,2,2,2,1,1,2,2,1,1,2,2]
[0,1,1,1,0,0,0,0,0,0,1,1,1]
---- correct output:
[12 1 0]
---- user output:
[ 0  0 13]
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-05 09:22:08) 
-- CODE:
from numpy import*
mt = array(eval(input("num de gols feitos: ")))
ta =  array(eval(input("num de gols levados: ")))

vet = zeros(3, dtype=int)

for x in mt:
	if mt[x]>ta[x]: #vitoria
		vet[0]= vet[0] + 1
	elif mt[x]==ta[x]:#empate
		vet[1] = vet[1] + 1
	elif mt[x]<ta[x]: #derrota
		vet[2] = vet[2] + 1
		
print(vet)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 10:11:21) 
-- CODE:
from numpy import*
mt = array(eval(input("num de gols feitos: ")))
ta =  array(eval(input("num de gols levados: ")))

vet = zeros(3, dtype=int)

for x in mt:
	if mt[x]>ta[x]: #vitoria
		vet[0]= vet[0] + 1
	elif mt[x]==ta[x]:#empate
		vet[1] = vet[1] + 1
	elif mt[x]<ta[x]: #derrota
		vet[2] = vet[2] + 1
		
print(vet)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-06 10:11:52) 
-- CODE:
from numpy import*
mt = array(eval(input("num de gols feitos: ")))
ta =  array(eval(input("num de gols levados: ")))

vet = zeros(3, dtype=int)

for x in mt:
	if mt[x]>ta[x]: #vitoria
		vet[0]= vet[0] + 1
	elif mt[x]==ta[x]:#empate
		vet[1] = vet[1] + 1
	elif mt[x]<ta[x]: #derrota
		vet[2] = vet[2] + 1
		
print(vet)
-- EXECUTION TIME:
0.840503
-- TEST CASE 1:
---- input:
[2,3,2,4,3,5,3,4,2,3,1,0]
[3,3,1,0,2,3,3,0,1,2,1,1]
---- correct output:
[7 3 2]
---- user output:
[10  1  1]
-- TEST CASE 2:
---- input:
[1,2,1,2,1,2,1,2,0]
[3,5,3,3,3,3,3,3,3]
---- correct output:
[0 0 9]
---- user output:
[0 0 9]
-- TEST CASE 3:
---- input:
[1,2,2,2,2,1,1,2,2,1,1,2,2]
[0,1,1,1,0,0,0,0,0,0,1,1,1]
---- correct output:
[12 1 0]
---- user output:
[13  0  0]
-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 10:14:38) 
-- CODE:
from numpy import*
mt = array(eval(input("num de gols feitos: ")))
ta =  array(eval(input("num de gols levados: ")))

vet = zeros(3, dtype=int)

for x in mt:
	if mt[x]>ta[x]: #vitoria
		vet[0]= vet[0] + 1
	elif mt[x]==ta[x]:#empate
		vet[1] = vet[1] + 1
	elif mt[x]<ta[x]: #derrota
		vet[2] = vet[2] + 1
		
print(vet)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 10:16:51) 
-- CODE:
from numpy import*
mt = array(eval(input("num de gols feitos: ")))
ta =  array(eval(input("num de gols levados: ")))

vet = zeros(3, dtype=int)

for x in mt:
	if mt[x]>ta[x]: #vitoria
		vet[0]= vet[0] + 1
	elif mt[x]==ta[x]:#empate
		vet[1] = vet[1] + 1
	elif mt[x]<ta[x]: #derrota
		vet[2] = vet[2] + 1
		
print(vet)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 10:23:22) 
-- CODE:
from numpy import*
mt = array(eval(input("num de gols feitos: ")))
ta =  array(eval(input("num de gols levados: ")))

vet = zeros(3, dtype=int)

for i in range(size(mt)):
	if mt[i]>ta[i]: #vitoria
		vet[0]= vet[0] + 1
	elif mt[i]==ta[i]:#empate
		vet[1] = vet[1] + 1
	elif mt[i]<ta[i]: #derrota
		vet[2] = vet[2] + 1
		
print(vet)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-06 10:23:47) 
-- CODE:
from numpy import*
mt = array(eval(input("num de gols feitos: ")))
ta =  array(eval(input("num de gols levados: ")))

vet = zeros(3, dtype=int)

for i in range(size(mt)):
	if mt[i]>ta[i]: #vitoria
		vet[0]= vet[0] + 1
	elif mt[i]==ta[i]:#empate
		vet[1] = vet[1] + 1
	elif mt[i]<ta[i]: #derrota
		vet[2] = vet[2] + 1
		
print(vet)
-- EXECUTION TIME:
1.15645
-- TEST CASE 1:
---- input:
[2,3,2,4,3,5,3,4,2,3,1,0]
[3,3,1,0,2,3,3,0,1,2,1,1]
---- correct output:
[7 3 2]
---- user output:
[7 3 2]
-- TEST CASE 2:
---- input:
[1,2,1,2,1,2,1,2,0]
[3,5,3,3,3,3,3,3,3]
---- correct output:
[0 0 9]
---- user output:
[0 0 9]
-- TEST CASE 3:
---- input:
[1,2,2,2,2,1,1,2,2,1,1,2,2]
[0,1,1,1,0,0,0,0,0,0,1,1,1]
---- correct output:
[12 1 0]
---- user output:
[12  1  0]
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 08:45:01) 
-- CODE:
from numpy import*
mt = array(eval(input("num de gols feitos: ")))
ta =  array(eval(input("num de gols levados: ")))

vet = zeros(3, dtype=int)

for i in range(size(mt)):
	if mt[i]>ta[i]: #vitoria
		vet[0]= vet[0] + 1
	elif mt[i]==ta[i]:#empate
		vet[1] = vet[1] + 1
	elif mt[i]<ta[i]: #derrota
		vet[2] = vet[2] + 1
		
print(vet)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 08:45:13) 
-- CODE:
from numpy import*
mt = array(eval(input("num de gols feitos: ")))
ta =  array(eval(input("num de gols levados: ")))

vet = zeros(3, dtype=int)

for i in range(size(mt)):
	if mt[i]>ta[i]: #vitoria
		vet[0]= vet[0] + 1
	elif mt[i]==ta[i]:#empate
		vet[1] = vet[1] + 1
	elif mt[i]<ta[i]: #derrota
		vet[2] = vet[2] + 1
		
print(vet)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
